--- a/directives-app/src/app/app.component.html
+++ b/directives-app/src/app/app.component.html
@@ -3,7 +3,14 @@
 <app-ng-class></app-ng-class>
 <app-ng-if></app-ng-if>
 <app-ng-for></app-ng-for>
+<app-ng-for-form></app-ng-for-form>
+<app-ng-switch></app-ng-switch>
+<app-ng-template></app-ng-template>
+<app-ng-container></app-ng-container>
 
 -->
 
-<app-ng-for-form></app-ng-for-form>
+<app-ng-content>
+  <p>My name is <strong>Homer Simpson</strong>, nice to meet you.</p>
+  <p>A beer, please.</p>
+</app-ng-content>
